--- a/src/app/surf-event/surf-event/competition/round/heat/heat.component.html
+++ b/src/app/surf-event/surf-event/competition/round/heat/heat.component.html
@@ -24,6 +24,7 @@
                          [resultType]="getHeatStatus()"
                          [riderColorIndex]=riderIndex
                          [disableInput]="isSaved"
+                         [formControl]="getControl(riderIndex)"
         ></rs-rider-result>
     </div>
     <div class="round__riders__single-rider--placeholder" *ngIf="!riders.length">
