--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
@@ -25,7 +25,7 @@
                 <div class="rider__card__input-container">
                         <input type="number"
                                class="rider__card__input"
-                               [formControlName]="formControlName"
+                               [formControl]="formControl"
                         >
                     <mat-icon aria-hidden="false" *ngIf="disableInput">locked</mat-icon>
                 </div>
