--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
@@ -23,10 +23,15 @@
             <div *ngSwitchCase="'finished'" class="rider__card__type">
                 <p>Points:</p>
                 <div class="rider__card__input-container">
-                        <input type="number"
-                               class="rider__card__input"
-                               [formControl]="formControl"
-                        >
+
+                    <input type="number"
+                           class="rider__card__input"
+                           [formControl]="control"
+                           [name]="riderId"
+                           [disabled]="disableInput"
+                           #inputElement
+                           [ngClass]="{'invalid': control.invalid && control.touched}"
+                    >
                     <mat-icon aria-hidden="false" *ngIf="disableInput">locked</mat-icon>
                 </div>
             </div>
