--- a/src/app/core/header/navigation/navigation.component.scss
+++ b/src/app/core/header/navigation/navigation.component.scss
@@ -5,6 +5,11 @@
 
 .navigation {
 
+    &__notification{
+        position: absolute;
+        right: 2.5rem;
+    }
+
     &__checkbox {
         display: none;
     }
