--- a/src/app/core/header/navigation/notification/notification.component.scss
+++ b/src/app/core/header/navigation/notification/notification.component.scss
@@ -14,6 +14,11 @@
 
         mat-icon{
             vertical-align: middle;
+            cursor: pointer;
         }
     }
+}
+
+mat-dialog-actions{
+    justify-content: center;
 }
