--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -52,10 +52,11 @@
         width: 60px;
         height: 40px;
         border: none;
-        border-bottom: 1px solid $color-primary;
+        border-bottom: 2px solid $color-primary;
         text-align: center;
         font-size: 1.5rem;
         color: $color-primary;
+        transition: all .3s;
 
         &:disabled {
             cursor: not-allowed;
