--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -1,4 +1,3 @@
-<form [formGroup]="roundForm">
 <div cdkDropListGroup class="container">
     <mat-card class="round">
         <div class="round__header">
@@ -9,7 +8,7 @@
                     Assign Riders Randomly
                 </button>
                 <button mat-raised-button (click)="revert()" *ngIf="!oneHeatStarted">Revert</button>
-                <button mat-raised-button color="primary"  [disabled]="!roundForm.invalid"
+                <button mat-raised-button color="primary"  [disabled]="checkAllHeatsFinished()"
                         (click)="moveToNextRound(roundNumber)">
                     Move to next round
                 </button>
@@ -30,7 +29,6 @@
                 <div class="round__heat__container">
                     <rs-heat *ngFor="let heat of heats; let heatIndex = index"
                              [heatNumber]="heatIndex"
-                             [parent]="roundForm"
                              [heat]=heat
                              [hasUnassignedRiders]="unassignedRiders.length > 0"
                              (drop)="drop($event)"
@@ -44,4 +42,3 @@
         </div>
     </mat-card>
 </div>
-</form>
