Route /register selects Register-Tab and displays the Registration form

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <mat-tab-group mat-align-tabs="center">
+    <mat-tab-group mat-align-tabs="center" [selectedIndex]="selectedTabIndex">
         <mat-tab label="Login">
             <rs-signup-form [formMode]="'login'"></rs-signup-form>
         </mat-tab>
