--- a/src/app/surf-event/surf-event/competition/competition.component.html
+++ b/src/app/surf-event/surf-event/competition/competition.component.html
@@ -1,7 +1,11 @@
 <mat-tab-group [selectedIndex]="selectedTabIndex">
     <mat-tab *ngFor="let round of rounds; let roundIndex = index" [label]="getRoundLabel(roundIndex)" [disabled]="round.riders.length === 0">
         <div class="competition-container">
-            <rs-round [riders]="round.riders" [roundNumber]="round.id" (finishedRound)="onFinishedRound($event)"></rs-round>
+            <rs-round
+                [riders]="round.riders"
+                [roundNumber]="round.id"
+                [roundNumberFinal]="rounds.length-1"
+                (finishedRound)="onFinishedRound($event)"></rs-round>
         </div>
     </mat-tab>
 </mat-tab-group>
