Replacement of notification icon (flex)

--- a/src/app/core/header/navigation/navigation.component.html
+++ b/src/app/core/header/navigation/navigation.component.html
@@ -1,9 +1,9 @@
 <div class="navigation">
 
-    <div class="navigation__notification">
-        <rs-notification></rs-notification>
-    </div>
-
+<!--    <div class="navigation__notification">-->
+<!--        <rs-notification></rs-notification>-->
+<!--    </div>-->
+    <rs-notification></rs-notification>
     <input type="checkbox" class="navigation__checkbox" id="navi-toggle" #navigationToggler [checked]="isChecked"
            (change)="toggleScrolling(false)">
     <label for="navi-toggle" class="navigation__button">
