--- a/src/app/core/header/navigation/navigation.component.scss
+++ b/src/app/core/header/navigation/navigation.component.scss
@@ -5,9 +5,11 @@
 
 .navigation {
 
-    &__notification{
-        position: absolute;
-        right: 2.5rem;
+    display: flex;
+    justify-content: flex-end;
+
+    rs-notification{
+        margin-right: 1rem;
     }
 
     &__checkbox {
@@ -15,8 +17,6 @@
     }
 
     &__button {
-        height: 7rem;
-        width: 7rem;
         border-radius: 50%;
         position: relative;
         top: .4rem;
