--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
@@ -1,4 +1,4 @@
-<mat-card class="rider__card">
+<mat-card class="rider__card" [ngClass]="{'no-hover':resultType === 'surfing' || resultType === 'finished'}">
     <mat-spinner *ngIf="!rider"></mat-spinner>
     <mat-card-header class="rider__card__header" *ngIf="rider">
         <div mat-card-avatar
