--- a/src/app/surf-event/surf-event/competition/competition.component.html
+++ b/src/app/surf-event/surf-event/competition/competition.component.html
@@ -2,9 +2,8 @@
     <mat-tab *ngFor="let round of rounds; let roundIndex = index" [label]="getRoundLabel(roundIndex)" [disabled]="round.riders.length === 0">
         <div class="competition-container">
             <rs-round
-                [riders]="round.riders"
-                [roundNumber]="round.id"
-                [roundNumberFinal]="rounds.length-1"
+                [round]="round"
+                [isFinalRound]="round.id === rounds.length-1"
                 (finishedRound)="onFinishedRound($event)"></rs-round>
         </div>
     </mat-tab>
