--- a/src/app/surf-event/surf-event/competition/round/heat/heat.component.html
+++ b/src/app/surf-event/surf-event/competition/round/heat/heat.component.html
@@ -1,16 +1,16 @@
 <form [formGroup]="heatForm">
 <div class="round__heat__header">
-    <div class="round__heat__header-title">Heat {{heatNumber + 1}}</div>
+    <div class="round__heat__header-title">Heat {{heat.id + 1}}</div>
     <button mat-raised-button color="primary" type="button"
-            *ngIf="!hasUnassignedRiders && !heat.hasStarted && !heat.hasStopped"
+            *ngIf="!hasUnassignedRiders && heat.state === 'idle'"
             (click)="onStatusChange('start')">Start Heat
     </button>
     <button mat-raised-button color="primary" type="button"
-            *ngIf="heat.hasStarted && !heat.hasStopped"
+            *ngIf="heat.state === 'running'"
             (click)="onStatusChange('stop')">End Heat
     </button>
     <button mat-raised-button color="primary"
-            *ngIf="heat.hasStopped" type="button"
+            *ngIf="heat.state === 'finished' || heat.state === 'completed'" type="button"
             (click)="onStatusChange('save')" [disabled]="!heatForm.valid">
         Save Heat
         <mat-icon *ngIf="heat.results.length > 0">checkmark</mat-icon>
@@ -21,7 +21,7 @@
 <div cdkDropList [cdkDropListData]="heat.riders" class="round__riders"
      (cdkDropListDropped)="onDrop($event)">
     <div class="round__riders__single-rider" *ngFor="let rider of heat.riders; let riderIndex = index"
-         cdkDrag [cdkDragDisabled]="heat.hasStarted">
+         cdkDrag [cdkDragDisabled]="heat.state !== 'idle'">
         <rs-rider-result [riderId]="rider"
                          [resultType]="getHeatStatus()"
                          [riderColorIndex]=riderIndex
