--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -4,15 +4,15 @@
             <h1 *ngIf="round.id === 0">Seeding round</h1>
             <h1 *ngIf="round.id !== 0">Round {{round.id}}</h1>
             <div class="round__header-buttons">
-                <button mat-raised-button color="primary" *ngIf="!oneHeatStarted" (click)="automaticallyAssignRiders()">
+                <button mat-raised-button color="primary" *ngIf="hasNoHeatStarted()" (click)="automaticallyAssignRiders()">
                     Assign Riders Randomly
                 </button>
-                <button mat-raised-button (click)="revert()" *ngIf="!oneHeatStarted">Revert</button>
-                <button mat-raised-button color="primary"  [disabled]="checkAllHeatsFinished()" *ngIf="!isFinalRound"
+                <button mat-raised-button (click)="revert()" *ngIf="hasNoHeatStarted()">Revert</button>
+                <button mat-raised-button color="primary"  [disabled]="!areAllHeatsFinished()" *ngIf="!isFinalRound"
                         (click)="moveToNextRound(round.id)">
                     Move to next round
                 </button>
-                <button mat-raised-button color="primary"  [disabled]="checkAllHeatsFinished()"
+                <button mat-raised-button color="primary"  [disabled]="!areAllHeatsFinished()"
                         *ngIf="isFinalRound"
                         (click)="finishCompetition()">
                     Finish Competition
@@ -40,7 +40,6 @@
                              class="round__heat"
                     >
                     </rs-heat>
-
                 </div>
             </div>
         </div>
