Working round & heat

--- a/src/app/surf-event/surf-event/competition/round/round.component.html
+++ b/src/app/surf-event/surf-event/competition/round/round.component.html
@@ -35,6 +35,7 @@
                     <rs-heat *ngFor="let heat of round.heats"
                              [heat]=heat
                              [hasUnassignedRiders]="unassignedRiders.length > 0"
+                             [maxRidersInHeat]="maxRidersInHeat"
                              (drop)="drop($event)"
                              (statusChange)="handleStatusChange($event)"
                              class="round__heat"
