--- a/src/app/surf-event/surf-event/competition/round/heat/heat.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/heat/heat.component.scss
@@ -7,6 +7,7 @@
     &__heat {
         margin: .5rem;
         border: 1px solid $color-primary;
+        border-radius: 4px;
 
         &__header {
             display: flex;
