--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -38,6 +38,12 @@
         margin: 0;
     }
 
+    &__nickname {
+        font-size: .8rem;
+        font-weight: normal;
+        margin: 0;
+    }
+
     &__icon {
         margin: 0;
     }
@@ -59,6 +65,21 @@
 
         &:disabled {
             cursor: not-allowed;
+        }
+    }
+
+    &__points {
+        color: $color-white;
+        font-weight: 800;
+
+        &-cointainer {
+            height: 2rem;
+            width: 2rem;
+            border-radius: 50%;
+            background-color: $color_primary;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     }
 
@@ -93,4 +114,10 @@ input[type=number] {
 .invalid {
     border: 2px solid #f44336;
     border-radius: 4px;
+}
+
+.result {
+    max-height: 50px;
+    padding: 2px;
+    align-items: center;
 }
