--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -37,7 +37,7 @@
 }
 
 .rider {
-    width: 300px;
+    width: 250px;
     margin-bottom: .2rem;
 
     &:last-of-type {
@@ -49,7 +49,7 @@
     }
 }
 
-.relativ-container {
+.relative-container {
     position: relative;
 }
 
